Starting on the REGEX for the zip code

--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
 <body>      
   <h1 id = "headerone">What's the Temperature?</h1>
   <br>
-  Enter your zip code: <input id="zipinput" type="number" name="number" oninput="zipfunction()">
+  <p>Enter your zip code:</p> <input id="zipinput" type="number" name="number" oninput="zipfunction()">
   
     <br>
     <div >
 
-<button id="displaydata">Display Louiville's Temperature</button>
 <li id = "weatherdiv">
 
 </li>
       
 </div>
 
-<p>Input Temperature in Kalvin to convert to a more relatable measure:</p>
+<p>Input Temperature in Kelvin to convert to a more relatable measure:</p>
 
-<label for="far">Enter Temperature in Kalvin Here:</label><br>
+<label for="far">Enter Temperature in Kelvin Here:</label><br>
   <form id = "converter">
   <input type="text" id="fname"><br>
   <form>
