--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width">
         <html>
       <link href="style.css" rel="stylesheet" type="text/css" />
+      <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
       <meta charset="utf-8">
     
     <title>JavascriptWeatherApp</title>
@@ -12,14 +13,16 @@
 <body>      
   <h1 id = "headerone">What's the Temperature?</h1>
   <br>
+  
+  
   <p>Enter your zip code:</p> <input id="zipinput" type="number" name="number" oninput="zipfunction()">
   
     <br>
     <div >
 
-<li id = "weatherdiv">
+<div id = "weatherdiv">
 
-</li>
+
       
 </div>
 
@@ -38,6 +41,13 @@
   <input type="submit" value="Submit" onclick= "radiotempcheck()">
 
   <div id="dataoutput"></div>
+
+  <button id = "chartbutton" onclick = "getplotdata()">Click for Chart</button>
+
+  <div id="ydata"></div>
+<div id="graphbox">
+  <div id="tester" style="width:600px;height:250px;"></div>
+</div>
 </form>
 
   
