--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       </div>
       <p>To convert, input Temperature and then choose Faranheit or Celcius:</p>
 
-    <label for="far">Enter Temperature in Kelvin Here:</label><br>
-  <form id = "converter">
-    <br>
-  <input type="text" id="fname">
-  <br>
-  <br>
-  <form>
+      <label for="far">Enter Temperature in Kelvin Here:</label><br>
+      <form id = "converter">
+      <br>
+      <input type="text" id="fname">
+      <br>
+      <br>
+      <form>
     What standard would you like to use?<br>
     <input type="radio" name="temps" id="faranheit">Faranheit<br>
     <input type="radio" name="temps" id="celcius">Celcius
@@ -35,14 +35,13 @@
 
   
   <input type="submit" value="Submit" onclick= "radiotempcheck()">
-
+  </form>
+  
   <div id="dataoutput"></div>
 
-  <div id="ydata"></div>
-<div id="graphbox">
-  <div id="tester" style="width:600px;height:250px;"></div>
-</div>
-</form>
+
+  <div id="tester" background-color="green" style="width:600px;height:250px;"></div>
+
 
   
 <script src="script.js"></script>
