Centered some text on webpage

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
       <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
       <meta charset="utf-8">
     
-    <title>JavascriptWeatherApp</title>
+    <title>Javascript Weather App</title>
     
 </head> 
 
 <!-- main body -->
   <body>      
     <h1 id = "headerone">What's the Weather?</h1>
-      <br>
 <!-- Zip Code Input Div -->
       <div id= "inputzip"><p>Enter your zip code:</p> <input id="zipinput" type="number" name="number">
         <button id="zipbutton" onclick="zipfunction()">Click Here for Local Weather</button>
@@ -22,7 +21,7 @@
         <div id="tester" style="width:600px;height:250px;"></div>
 <!-- Temperature Converter Div -->
         <div id = tempdiv>
-          <p>To convert temperature from Kelvin, input themperature and then choose Faranheit or Celcius:</p>
+          <p>To convert temperature from Kelvin:</p>
           <label for="far">Enter Temperature in Kelvin Here:</label><br>
           <form id = "converter">  
           <input type="number" id="fname">
@@ -45,4 +44,9 @@
   
 <script src="script.js"></script>
 </body>
+<footer>
+ 
+  <p><a href="mailto:anthonyirwin@gmail.com">anthonyirwin@gmail.com</a></p>
+
+</footer>
 </html>
